fixed button alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,10 +39,10 @@ a {
   margin-top:34em;
 }
 
-.centered {
-  padding-right: 150px;
-  padding-left: 150px;
-}
+/*.centered {*/
+  /*padding-right: 150px;*/
+  /*padding-left: 150px;*/
+/*}*/
 
 
 /* resize images */
